packages/domain/tests/fixtures/negative/internal-node-environment-extension.fixture.ts
import "@deepwork/sdk";
import "node:fs";
import "fs";
import "./missing-extension";

void process.env.FIXTURE_ONLY;
void import.meta.env.FIXTURE_ONLY;
